<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@color/background_component"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaludar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/teal_200"
        android:text="@string/activity_salud_app" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIndiceMasaCorporal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/teal_200"
        android:text="@string/activity_salud_masa" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTODO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/teal_200"
        android:text="@string/activity_salud_todo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSuperHero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/teal_200"
        android:text="@string/activity_salud_hero" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/teal_200"
        android:text="@string/activity_salud_setings" />
</LinearLayout>