<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheroapp.DetailSuperheroActivity">

    <ImageView
        android:id="@+id/ivSuperheros"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="45dp"
        android:layout_marginTop="220dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperHeroName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                tools:text="Marvin Garcia"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/tvSuperHeroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                tools:text="Marvin Garcia"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                tools:text="Marvin Garcia"
                android:textStyle="normal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="bottom"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_intelligence"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_strength"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_speed"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_durability"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_power"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_combat"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/superhero_intelligense"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/superhero_strength"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/superhero_speed"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/superhero_durability"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/superhero_power"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/superhero_combat"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>